# openrouter-fallback

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/: logo.txt
docs/: SUPPORTED_MODELS.md  autoupdate.md  quickstart.md  troubleshooting.md
openrouter_fallback/: cli.py  client.py  utils.py
scripts/: or-auto
